apply from: 'dep.other.gradle'
apply plugin: "com.github.ben-manes.versions"

buildscript {
    ext.springBootVersion = "2.2.6.RELEASE"
    ext.dependencyManagementVersion = "1.0.9.RELEASE"
    ext.modernizerVersion = "1.8.0-1"
    ext.gradleVersionsVersion = "0.28.0"

    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
        classpath "io.spring.gradle:dependency-management-plugin:${dependencyManagementVersion}"
        classpath "gradle.plugin.com.simonharrer:gradle-modernizer-plugin:${modernizerVersion}"
        classpath "com.github.ben-manes:gradle-versions-plugin:${gradleVersionsVersion}"
    }

    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
}

allprojects {
    group = 'com.huijiewei'
    version = '1.0.1'

    repositories {
        mavenCentral()
        jcenter()
    }
}

subprojects {
    apply plugin: "java"
    apply plugin: "com.simonharrer.modernizer"

    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    compileJava {
        options.annotationProcessorPath = configurations.annotationProcessor

        sourceCompatibility = JavaVersion.VERSION_11
        targetCompatibility = JavaVersion.VERSION_11
        options.encoding = 'UTF-8'
    }

    dependencies {
        compileOnly libs.lombok
        annotationProcessor libs.lombok
    }
}
